<resources>
    <string name="app_name">AiProject</string>
    <string name="not_started_yet">Not started yet</string>
    <string name="alpha_beta">Alpha Beta</string>
    <string name="genetic_algo">Genetic Algo</string>
    <string name="your_move">Your Move</string>
    <string name="bot_move">Bot Move</string>
    <string name="select_difficulty">Select difficulty</string>
    <string name="play_button">play button</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="debug_mode">Debug Mode: </string>
    <string name="debug_mode_ph">Debug Mode: %1$s</string>
    <string name="on">ON</string>
    <string name="game_over">Game over</string>
    <string name="you_won">You won</string>
    <string name="you_lose">You lose</string>
    <string name="refresh">Refresh</string>
    <string name="pre_calc">Pre calculated</string>
    <string name="_0">0</string>
    <string name="start">Start</string>

</resources>